--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+    <span>Bank CPanel</span>
+    
+    <div class="pages">
+        <button mat-button routerLink="/users/user-listing">User Listing</button>
+        <button mat-button routerLink="/users/add-edit/0">Add / Edit User</button>
+    </div>
+</mat-toolbar>
