--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-main-layout>
-  <!-- Content of the page goes here -->
-  <h1>Welcome to My Angular App</h1>
-  <p>This is the main content area of the page.</p>
+  <router-outlet />
 </app-main-layout>
