--- a/src/app/shared/components/empty-result/empty-result.component.html
+++ b/src/app/shared/components/empty-result/empty-result.component.html
@@ -1,8 +1,8 @@
 <div class="no-results-message">
-    <i class="fas fa-users-slash"></i>
+    <!-- <i class="fas fa-users-slash"></i> -->
     <p>{{message}}</p>
   </div>
   <div class="empty-image">
-    <img src="/assets/empty-state.png" alt="Empty State" />
+    <img src="assets/empty-state.png" alt="Empty State" />
   </div>
   <p class="suggestion">{{descrption}}</p>
