--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 <main>
+  <!-- <app-loader  *ngIf="showLoading$ |async"></app-loader> -->
   <ng-content></ng-content>
 </main>
 
