--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -22,13 +22,9 @@
                 </a>
                 <ul class="dropdown-menu fxs-3">
                     <li >
-                        <a class="dropdown-item" itemPointer [routerLink]="['/auth']">
+                        <a class="dropdown-item" itemPointer [routerLink]="['/login']">
                             <strong>LOG IN</strong>
                         </a>
-                    </li>
-                    <li >
-                        <a class="dropdown-item" itemPointer [routerLink]="['/recipes/myrecipes']"><strong>MY
-                                RECIPES</strong></a>
                     </li>
                     <li >
                         <a class="dropdown-item" itemPointer [routerLink]="['/user']">
